--- a/docker/stacks/ntfy/compose.yaml
+++ b/docker/stacks/ntfy/compose.yaml
@@ -3,7 +3,7 @@ include:
 
 services:
   ntfy:
-    image: binwiederhier/ntfy:v2.11.0@sha256:4a7d0f0adc6d5d9fc36e64ab55ef676e76e124a2bdd50ce115b6d9c1c7430294
+    image: binwiederhier/ntfy:v2.11.0
     container_name: ntfy
     restart: always
     command:
@@ -23,13 +23,18 @@ services:
         retries: 3
         start_period: 40s
     labels:
-      diun.enable: "true"
+      # What's Up Docker
+      wud.watch: true
+      wud.watch.digest: false
+      wud.display.icon: sh:ntfy
+      wud.tag.include: ^v\d+\.\d+\.\d+$$
+      # Traefik
       traefik.enable: "true"
-      # Frontend => Router
+      # Traefik, Router
       traefik.http.routers.ntfy.entrypoints: websecure
       traefik.http.routers.ntfy.rule: Host(`${NTFY_URL_PREFIX:-ntfy.}${NETWORK_DOMAIN}`)
       traefik.http.routers.ntfy.tls.certresolver: dns-cloudflare
       traefik.http.routers.ntfy.tls: "true"
-      # Frontend => Services
+      # Traefik, Services
       traefik.http.routers.ntfy.service: ntfy
       traefik.http.services.ntfy.loadbalancer.server.port: 80
