--- a/docker/stacks/emulator-source-backups/compose.yaml
+++ b/docker/stacks/emulator-source-backups/compose.yaml
@@ -3,7 +3,7 @@ include:
 
 services:
   emulator-source-backups:
-    image: gitea/gitea:1.24.0@sha256:724d420b64da6582b9ac8298856e4791e8a46307f31265cb2630ed0b058073ab
+    image: gitea/gitea:1.24.0
     container_name: emulator-source-backups
     restart: unless-stopped
     environment:
@@ -23,13 +23,18 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     labels:
-      diun.enable: "true"
+      # What's Up Docker
+      wud.watch: true
+      wud.watch.digest: false
+      wud.display.icon: sh:gitea
+      wud.tag.include: ^\d+\.\d+\.\d+$$
+      # Traefik
       traefik.enable: "true"
-      # Frontend => Router
+      # Traefik, Router
       traefik.http.routers.esb.entrypoints: websecure
       traefik.http.routers.esb.rule: Host(`${ESB_URL_PREFIX:-esb.}${NETWORK_DOMAIN}`)
       traefik.http.routers.esb.tls.certresolver: dns-cloudflare
-      # Frontend => Services
+      # Traefik, Services
       traefik.http.routers.esb.service: esb
       traefik.http.services.esb.loadbalancer.server.port: 3000
 volumes:
