--- a/docker/stacks/mylar/compose.yaml
+++ b/docker/stacks/mylar/compose.yaml
@@ -4,7 +4,7 @@ include:
 
 services:
   mylar:
-    image: ghcr.io/linuxserver/mylar3:version-v0.8.2-ls204@sha256:173f7895246dcddd4150a1cf55dd924e494557dd8d62e539aaef90849a8e9b58
+    image: ghcr.io/linuxserver/mylar3:0.8.2
     container_name: mylar
     restart: unless-stopped
     networks:
@@ -17,13 +17,18 @@ services:
       PGID: ${GID:-1000}
       TZ: ${TIMEZONE}
     labels:
-      diun.enable: "true"
+      # What's Up Docker
+      wud.watch: true
+      wud.watch.digest: false
+      wud.display.icon: sh:mylar3
+      wud.tag.include: ^\d+\.\d+\.\d+$$
+      # Traefik
       traefik.enable: "true"
-      # Frontend => Router
+      # Traefik, Router
       traefik.http.routers.mylar.entrypoints: websecure
       traefik.http.routers.mylar.rule: Host(`${MYLAR_URL_PREFIX:-mylar.}${NETWORK_DOMAIN}`)
       traefik.http.routers.mylar.tls.certresolver: dns-cloudflare
       traefik.http.routers.mylar.middlewares: forwardAuth-authentik@file
-      # Frontend => Services
+      # Traefik, Services
       traefik.http.routers.mylar.service: mylar
       traefik.http.services.mylar.loadbalancer.server.port: 8090
