--- a/docker/stacks/obsidian-livesync/compose.yaml
+++ b/docker/stacks/obsidian-livesync/compose.yaml
@@ -5,7 +5,7 @@ services:
   obsidian-livesync:
     tty: true
     stdin_open: true
-    image: couchdb:3.4.3@sha256:61df6b12ad36146a1ac138e5d9ad31e473a3e622aeccab6664e174e100ec1276
+    image: couchdb:3.4.3
     container_name: obsidian-livesync
     restart: unless-stopped
     environment:
@@ -17,6 +17,12 @@ services:
       - /srv/application_data/obsidian-livesync/couchdb/data:/opt/couchdb/data
       - /srv/application_data/obsidian-livesync/couchdb/etc:/opt/couchdb/etc/local.d
     labels:
+      # What's Up Docker
+      wud.watch: true
+      wud.watch.digest: false
+      wud.display.icon: sh:couchdb
+      wud.tag.include: ^\d+\.\d+\.\d+$$
+      # Traefik
       traefik.enable: "true"
       # Frontend => Router
       traefik.http.routers.obsidian-livesync.entrypoints: websecure
