--- a/docker/stacks/radarr/compose.yaml
+++ b/docker/stacks/radarr/compose.yaml
@@ -4,7 +4,7 @@ include:
 
 services:
   radarr:
-    image: ghcr.io/linuxserver/radarr:5.25.0.10024-ls275@sha256:36e43720c130ec2d3ed80726d2134af3c6644729f4750abc830fdda7fa71d1e1
+    image: ghcr.io/linuxserver/radarr:5.25.0
     container_name: radarr
     restart: unless-stopped
     networks:
@@ -24,14 +24,19 @@ services:
       PGID: ${GID:-1000}
       TZ: ${TIMEZONE}
     labels:
-      diun.enable: "true"
+      # What's Up Docker
+      wud.watch: true
+      wud.watch.digest: false
+      wud.display.icon: sh:radarr
+      wud.tag.include: ^\d+\.\d+\.\d+$$
+      # Traefik
       traefik.enable: "true"
-      # Frontend => Router
+      # Traefik, Router
       traefik.http.routers.radarr.entrypoints: websecure
       traefik.http.routers.radarr.rule: Host(`${RADARR_URL_PREFIX:-radarr.}${NETWORK_DOMAIN}`)
       traefik.http.routers.radarr.tls.certresolver: dns-cloudflare
       traefik.http.routers.radarr.middlewares: forwardAuth-authentik@file
-      # Frontend => Services
+      # Traefik, Services
       traefik.http.routers.radarr.service: radarr
       traefik.http.services.radarr.loadbalancer.server.port: 7878
 
