--- a/docker/stacks/readarr/compose.yaml
+++ b/docker/stacks/readarr/compose.yaml
@@ -4,7 +4,7 @@ include:
 
 services:
   readarr:
-    image: ghcr.io/linuxserver/readarr:develop-0.4.17.2801-ls155@sha256:d71c575745ab4579ae0dbb4f91244cf9a74d7085d28a927218146466f8e6418c
+    image: ghcr.io/linuxserver/readarr:develop-0.4.17
     container_name: readarr
     restart: unless-stopped
     networks:
@@ -18,15 +18,19 @@ services:
       PGID: ${GID:-1000}
       TZ: ${TIMEZONE}
     labels:
-      diun.enable: "true"
-      diun.include_tags: "develop-.*"
+      # What's Up Docker
+      wud.watch: true
+      wud.watch.digest: false
+      wud.display.icon: sh:readarr
+      wud.tag.include: ^develop-\d+\.\d+\.\d+\.\d+-ls\d+$$
+      # Traefik
       traefik.enable: "true"
-      # Frontend => Router
+      # Traefik, Router
       traefik.http.routers.readarr.entrypoints: websecure
       traefik.http.routers.readarr.rule: Host(`${READARR_URL_PREFIX:-readarr.}${NETWORK_DOMAIN}`)
       traefik.http.routers.readarr.tls.certresolver: dns-cloudflare
       traefik.http.routers.readarr.middlewares: forwardAuth-authentik@file
-      # Frontend => Services
+      # Traefik, Services
       traefik.http.routers.readarr.service: readarr
       traefik.http.services.readarr.loadbalancer.server.port: 8787
 
