--- a/docker/stacks/sonarr/compose.yaml
+++ b/docker/stacks/sonarr/compose.yaml
@@ -4,7 +4,7 @@ include:
 
 services:
   sonarr:
-    image: ghcr.io/linuxserver/sonarr:4.0.14.2939-ls284@sha256:4dfedb2598dc6bd51c40f4ecea2631dbe367840678ab109cd968f821d81a5327
+    image: ghcr.io/linuxserver/sonarr:4.0.14
     container_name: sonarr
     restart: unless-stopped
     networks:
@@ -25,14 +25,19 @@ services:
       PGID: ${GID:-1000}
       TZ: ${TIMEZONE}
     labels:
-      diun.enable: "true"
+      # What's Up Docker
+      wud.watch: true
+      wud.watch.digest: false
+      wud.display.icon: sh:sonarr
+      wud.tag.include: ^\d+\.\d+\.\d+$$
+      # Traefik
       traefik.enable: "true"
-      # Frontend => Router
+      # Traefik, Router
       traefik.http.routers.sonarr.entrypoints: websecure
       traefik.http.routers.sonarr.rule: Host(`${SONARR_URL_PREFIX:-sonarr.}${NETWORK_DOMAIN}`)
       traefik.http.routers.sonarr.tls.certresolver: dns-cloudflare
       traefik.http.routers.sonarr.middlewares: forwardAuth-authentik@file
-      # Frontend => Services
+      # Traefik, Services
       traefik.http.routers.sonarr.service: sonarr
       traefik.http.services.sonarr.loadbalancer.server.port: 8989
 
