--- a/docker/stacks/kavita/compose.yaml
+++ b/docker/stacks/kavita/compose.yaml
@@ -4,7 +4,7 @@ include:
 
 services:
   kavita:
-    image: jvmilazz0/kavita:0.8.7.8
+    image: jvmilazz0/kavita:0.8.7
     container_name: kavita
     restart: unless-stopped
     networks:
@@ -19,7 +19,7 @@ services:
       wud.watch: true
       wud.watch.digest: false
       wud.display.icon: sh:kavita
-      wud.tag.include: ^\d+\.\d+\.\d+\.\d+$$
+      wud.tag.include: ^\d+\.\d+\.\d+$$
       # Traefik
       traefik.enable: "true"
       # Traefik, Router
