uptime-kuma: fix missing service line

--- a/docker/stacks/uptime-kuma/dockerproxy.yaml
+++ b/docker/stacks/uptime-kuma/dockerproxy.yaml
@@ -1,4 +1,5 @@
 services:
+  uptime-kuma.dockerproxy:
     image: ghcr.io/tecnativa/docker-socket-proxy:latest
     container_name: uptime-kuma.dockerproxy
     restart: always
