--- a/docker/stacks/mylar/compose.yaml
+++ b/docker/stacks/mylar/compose.yaml
@@ -22,6 +22,7 @@ services:
       wud.watch.digest: false
       wud.display.icon: sh:mylar3
       wud.tag.include: ^\d+\.\d+\.\d+$$
+      wud.tag.exclude: ^\d{4}\.\d{2}\.\d{2}$$
       # Traefik
       traefik.enable: "true"
       # Traefik, Router
