--- a/docker/stacks/ntfy/compose.yaml
+++ b/docker/stacks/ntfy/compose.yaml
@@ -3,7 +3,7 @@ include:
 
 services:
   ntfy:
-    image: binwiederhier/ntfy:v2.11.0
+    image: binwiederhier/ntfy:v2.14.0
     container_name: ntfy
     restart: always
     command:
@@ -26,6 +26,7 @@ services:
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
+      wud.link.template: https://github.com/go-gitea/gitea/releases/tag/v$${major}.$${minor}.$${patch}
       wud.display.icon: sh:ntfy
       wud.tag.include: ^v\d+\.\d+\.\d+$$
       # Traefik
