--- a/docker/stacks/overseerr/compose.yaml
+++ b/docker/stacks/overseerr/compose.yaml
@@ -21,6 +21,7 @@ services:
       wud.watch.digest: false
       wud.display.icon: sh:overseerr
       wud.tag.include: ^\d+\.\d+\.\d+$$
+      wud.tag.exclude: ^\d{4}\.\d{2}\.\d{2}$$
       # Traefik
       traefik.enable: "true"
       # Traefik, Router
