--- a/bootstrap/hyperion/traefik/traefik.yaml
+++ b/bootstrap/hyperion/traefik/traefik.yaml
@@ -7,7 +7,7 @@ services:
   #-> https://hub.docker.com/_/traefik/
   traefik:
     container_name: traefik
-    image: traefik:v3.4.3
+    image: traefik:v3.5.0
     restart: always
     depends_on:
       - traefik.dockerproxy
@@ -108,6 +108,7 @@ services:
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
+      wud.link.template: https://github.com/traefik/traefik/releases/tag/v$${major}.$${minor}.$${patch}
       wud.display.icon: sh:traefik
       wud.tag.include: ^v\d+\.\d+\.\d+$$
       # Traefik
