--- a/bootstrap/hyperion/komodo/core.yaml
+++ b/bootstrap/hyperion/komodo/core.yaml
@@ -1,6 +1,6 @@
 services:
   komodo.core:
-    image: ghcr.io/moghtech/komodo-core:1.18.1
+    image: ghcr.io/moghtech/komodo-core:1.18.4
     container_name: komodo.core
     restart: always
     depends_on:
@@ -35,6 +35,7 @@ services:
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
+      wud.link.template: https://github.com/moghtech/komodo/releases/tag/v$${major}.$${minor}.$${patch}
       wud.display.icon: sh:komodo
       wud.tag.include: ^\d+\.\d+\.\d+$$
       # Traefik
