--- a/bootstrap/hyperion/authentik/worker.yaml
+++ b/bootstrap/hyperion/authentik/worker.yaml
@@ -1,6 +1,6 @@
 services:
   authentik.worker:
-    image: ghcr.io/goauthentik/server:2025.6.3
+    image: ghcr.io/goauthentik/server:2025.6.4
     container_name: authentik.worker
     restart: always
     command: worker
@@ -37,5 +37,6 @@ services:
       # What's Up Docker
       wud.watch: true
       wud.watch.digest: false
+      wud.link.template: https://github.com/goauthentik/authentik/releases/tag/version%2F$${major}.$${minor}.$${patch}
       wud.display.icon: sh:authentik
       wud.tag.include: ^\d+\.\d+\.\d+$$
