--- a/docker/stacks/ttrss/komodo.toml
+++ b/docker/stacks/ttrss/komodo.toml
@@ -50,9 +50,9 @@ NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 ADMIN_USER_ACCESS_LEVEL=-2
 
 # Auto create another user (in addition to built-in admin) unless it already exists.
-#AUTO_CREATE_USER=
+AUTO_CREATE_USER=[[TTRSS_ADMIN_USER]]
 #AUTO_CREATE_USER_PASS=
-#AUTO_CREATE_USER_ACCESS_LEVEL=0
+AUTO_CREATE_USER_ACCESS_LEVEL=10
 
 # Default database credentials.
 TTRSS_DB_USER=ttrss
@@ -64,7 +64,7 @@ TTRSS_DB_HOST=ttrss.db
 # See tt-rss/.docker/app/Dockerfile for a complete list.
 
 # You probably shouldn't disable auth_internal unless you know what you're doing.
-TTRSS_PLUGINS=auth_internal,auth_oidc,nginx_xaccel
+TTRSS_PLUGINS=auth_oidc,nginx_xaccel
 # TTRSS_SINGLE_USER_MODE=true
 # TTRSS_SESSION_COOKIE_LIFETIME=2592000
 # TTRSS_FORCE_ARTICLE_PURGE=30
