ttrss: move release tag to environment variable

--- a/docker/stacks/ttrss/komodo.toml
+++ b/docker/stacks/ttrss/komodo.toml
@@ -24,6 +24,8 @@ file_paths = [
   "../../networks/proxy_private.yaml"
 ]
 environment = """
+RELEASE_TAG=88806115
+
 # TTRSS_URL_PREFIX=
 NETWORK_DOMAIN=[[NETWORK_DOMAIN]]
 
