--- a/docker/stacks/ttrss/app.yaml
+++ b/docker/stacks/ttrss/app.yaml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: cthulhoo/ttrss-fpm-pgsql-static:88806115
+    image: cthulhoo/ttrss-fpm-pgsql-static:${RELEASE_TAG}
     container_name: ttrss.app
     restart: unless-stopped
     networks:
