--- a/docker/stacks/ttrss/backups.yaml
+++ b/docker/stacks/ttrss/backups.yaml
@@ -1,6 +1,6 @@
 services:
   backups:
-    image: cthulhoo/ttrss-fpm-pgsql-static:88806115
+    image: cthulhoo/ttrss-fpm-pgsql-static:${RELEASE_TAG}
     container_name: ttrss.backups
     restart: unless-stopped
     networks:
