--- a/docker/stacks/ttrss/updater.yaml
+++ b/docker/stacks/ttrss/updater.yaml
@@ -1,6 +1,6 @@
 services:
   updater:
-    image: cthulhoo/ttrss-fpm-pgsql-static:88806115
+    image: cthulhoo/ttrss-fpm-pgsql-static:${RELEASE_TAG}
     container_name: ttrss.updater
     restart: unless-stopped
     networks:
